--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/ba3bef1a23.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>CALCULATOR</title>
 </head>
 <body>
     <div class="container">
