--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                             <p id="val">68985</p> 
                         </div>
                         <div id="keypad">
-                            <p class ="first">c</p>  <p class="first">+/-</p> <p class="first">%</p>  <p class="orange">/</p>
-                            <p>7</p>                 <p>8</p>                 <p>9</p>                <p class="orange">*</p>
-                            <p>4</p>                 <p>5</p>                 <p>6</p>                <p class="orange">-</p>
-                            <p>1</p>                 <p>2</p>                 <p>3</p>                <p class="orange">+</p>
-                                 <p id="zero">0</p>                                     <p>.</p>                <p class="orange">=</p>  
+                            <p class ="first"> <a href="">C</a></p>  <p class="first"> <a href="">+/-</a></p>   <p class="first"><a href="">%</a></p>  <p class="orange"> <a href="">/</a> </p>
+                            <p> <a href="">7</a> </p>                <p> <a href="#">8</a></p>                   <p> <a href="">9</a></p>               <p class="orange"> <a href="">*</a></p>
+                            <p> <a href="">4</a></p>                 <p> <a href="">5</a></p>                   <p> <a href="">4</a></p>               <p class="orange"> <a href="">-</a></p>
+                            <p><a href="">1</a></p>                 <p><a href="">2</a> </p>                 <p><a href="">3</a></p>                <p class="orange"><a href="">+</a></p>
+                                 <p id="zero"><a href="">0</a></p>                                     <p><a href="">.</a></p>                <p class="orange"><a href="">=</a></p>  
                         </div>
                     </div>
                 </div>
